[package]
name = "glium_text"
version = "0.6.0"
authors = ["Pierre Krieger <pierre.krieger1708@gmail.com>"]
description = "Text drawing with glium and freetype"
keywords = ["text", "opengl"]
license = "MIT"

[dependencies]
freetype-sys = "0.1.2"
libc = "0.1"

[dependencies.glium]
version = "0.10.0"
default-features = false
features = ["cgmath"]

[dev-dependencies]
cgmath = "0.4"

[dev-dependencies.glium]
version = "0.10.0"
features = ["glutin"]
